--- a/MetHotels/MetHotelsClient/src/app/navbar/navbar.component.html
+++ b/MetHotels/MetHotelsClient/src/app/navbar/navbar.component.html
@@ -1,7 +1,14 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button
+        type="button"
+        class="navbar-toggle collapsed"
+        data-toggle="collapse"
+        data-target="#navbar"
+        aria-expanded="false"
+        aria-controls="navbar"
+      >
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -10,13 +17,23 @@
       <a class="navbar-brand" [routerLink]="['/home']">MetHotels</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
-
       <ul class="nav navbar-nav navbar-right">
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/home']">Home</a></li>
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/add']">Add Employee</a></li>
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/login']">Login</a></li>
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/register']">Register</a></li>
+        <li [routerLinkActive]="['active']">
+          <a [routerLink]="['/home']">Home</a>
+        </li>
+        <li *ngIf="loggedIn" [routerLinkActive]="['active']">
+          <a [routerLink]="['/add']">Add Room</a>
+        </li>
+        <li *ngIf="!loggedIn" [routerLinkActive]="['active']">
+          <a [routerLink]="['/login']">Login</a>
+        </li>
+        <li *ngIf="!loggedIn" [routerLinkActive]="['active']">
+          <a [routerLink]="['/register']">Register</a>
+        </li>
+        <li *ngIf="loggedIn" class="nav-item" (click)="logOut()">
+          <a class="nav-link">Log out</a>
+        </li>
       </ul>
-    </div><!--/.nav-collapse -->
+    </div>
   </div>
 </nav>
